--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3,7 +3,7 @@
 @tailwind utilities;
 
 body {
-  background-color: rgb(249, 247, 255);
+  background-color: rgba(0, 8, 28, 0.923);
 }
 
 /* Works on Firefox */
@@ -13,7 +13,7 @@ body {
 
 /* Works on Chrome, Edge, and Safari */
 *::-webkit-scrollbar {
-  width: 1px;
+  width: 0px;
 }
 
 *::-webkit-scrollbar-track {
